--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="first"></div>
         <div class="bai28">
-            <h1>Hello everyone, I am lê. I am a third-year student in information technology. I am looking forward to working in a professional environment where I can develop my professional skills, learn new knowledge to complete my assigned work.
+            <h1>Hello everyone, I am  khải lê. I am a third-year student in information technology. I am looking forward to working in a professional environment where I can develop my professional skills, learn new knowledge to complete my assigned work.
                 </h1>
             <h2> I'm rich</h2>
             <h3>i'm stupid</h3>
